--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "cmake.sourceDirectory": "D:/Flutter Projects/whatsapp_clone/windows/runner"
+    "cmake.sourceDirectory": "D:/Flutter Projects/whatsapp_clone/windows/runner",
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
