--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   uuid: ^4.2.1
   intl: ^0.18.1
   cached_network_image: ^3.3.1
+  cached_video_player: ^2.0.4
+  video_player: ^2.6.0
 
 dev_dependencies:
   flutter_test:
