--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   cached_network_image: ^3.3.1
   cached_video_player: ^2.0.4
   video_player: ^2.6.0
+  emoji_picker_flutter: ^1.6.4
 
 dev_dependencies:
   flutter_test:
