--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   cached_video_player: ^2.0.4
   video_player: ^2.6.0
   emoji_picker_flutter: ^1.6.4
+  enough_giphy_flutter: ^0.4.1
 
 dev_dependencies:
   flutter_test:
