--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,13 +44,17 @@ dependencies:
   image_picker: ^1.0.4
   firebase_storage: ^11.4.1
   flutter_contacts: ^1.1.7+1
-  uuid: ^4.2.1
+  uuid: ^3.0.7
   intl: ^0.18.1
   cached_network_image: ^3.3.1
   cached_video_player: ^2.0.4
   video_player: ^2.6.0
   emoji_picker_flutter: ^1.6.4
   enough_giphy_flutter: ^0.4.1
+  path_provider: ^2.1.2
+  permission_handler: ^11.0.1
+  flutter_sound: ^9.2.12
+  audioplayers: ^5.2.1
 
 dev_dependencies:
   flutter_test:
