--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   permission_handler: ^11.0.1
   flutter_sound: ^9.2.12
   audioplayers: ^5.2.1
+  swipe_to: ^1.0.6
 
 dev_dependencies:
   flutter_test:
