--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,7 +24,7 @@ if (flutterVersionName == null) {
 
 android {
     namespace "com.example.whatsapp_clone"
-    compileSdkVersion flutter.compileSdkVersion
+    compileSdkVersion 34
     ndkVersion flutter.ndkVersion
 
     compileOptions {
@@ -66,4 +66,5 @@ flutter {
 
 dependencies {
     implementation('com.google.android.exoplayer:exoplayer:2.19.1')
+     implementation 'com.google.firebase:firebase-appcheck-safetynet:16.0.0' 
 }
