--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   flutter_sound: ^9.2.12
   audioplayers: ^5.2.1
   swipe_to: ^1.0.6
+  story_view: ^0.16.0
 
 dev_dependencies:
   flutter_test:
