--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   audioplayers: ^5.2.1
   swipe_to: ^1.0.6
   story_view: ^0.16.0
+  agora_uikit: ^1.3.10
 
 dev_dependencies:
   flutter_test:
