--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   swipe_to: ^1.0.6
   story_view: ^0.16.0
   agora_uikit: ^1.3.10
+  cached_video_player_plus: ^1.0.1
 
 dev_dependencies:
   flutter_test:
