--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,12 @@ dependencies:
   story_view: ^0.16.0
   agora_uikit: ^1.3.10
   cached_video_player_plus: ^1.0.1
+  file_picker_writable: ^2.1.0+1
+  file_picker: ^8.0.0+1
+  flutter_downloader: ^1.11.7
+  url_launcher: ^6.2.4
+  url_launcher_windows: ^3.1.1
+  
 
 dev_dependencies:
   flutter_test:
